# beauhurst-lite

backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
backend/assessment/: settings.py  urls.py
backend/companies/: admin.py  apps.py  factories.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/companies/management/commands/: populate_database.py
backend/companies/migrations/: 0001_initial.py  0002_alter_deal_options_alter_employee_options_and_more.py  0003_company_companies_house_id.py
backend/search/: apps.py  signals.py  urls.py  views.py
backend/search/management/commands/: delete_indices.py  generate_test_data.py  index_all.py  init_opensearch.py
backend/search_service/: client.py  indexing.py  queries.py
frontend/: README.md  jest.config.js  package-lock.json  package.json  vitest.config.js
frontend/public/: index.html
frontend/src/: App.vue  router.js
frontend/src/components/: CompanyDetail.vue  EmployeeDetail.vue  SearchInterface.vue
frontend/tests/: setup.js  vitest-setup.js
frontend/tests/unit/: CompanyDetail.spec.js  CompanyDetail.vitest.spec.js  EmployeeDetail.spec.js  EmployeeDetail.vitest.spec.js
frontend/tests/unit/__snapshots__/: CompanyDetail.spec.js.snap  CompanyDetail.vitest.spec.js.snap  EmployeeDetail.spec.js.snap  EmployeeDetail.vitest.spec.js.snap
